# google-calendar-tui

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yml
src/: app.rs  auth.rs  config.rs  google.rs  main.rs  ui.rs
