[package]
name = "rust_tui_calendar" # Muss eindeutig auf crates.io sein
version = "0.1.7"
edition = "2024"
authors = ["Tjorven Liebe <tjorvenliebe@gmail.com>"]
description = "A terminal-based Google Calendar viewer written in Rust."
license = "MIT" # Oder "GPL-3.0" etc.
repository = "https://github.com/tjorven-liebe/google-calendar-tui"
homepage = "https://github.com/tjorven-liebe/google-calendar-tui"
readme = "README.md"
keywords = ["calendar", "google", "tui", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tiny_http = "0.12"
urlencoding = "2.1.3"
rayon = "1.12.0"